# libridialogue

./: .gitignore  README.md  config.yml  pyproject.toml
libridialogue/: __main__.py  generate.py  settings.py  simulate_dialogue_reverb.py
libridialogue/librispeech/: download.py  generate_csv.py
libridialogue/util/: analyze.py  separate_asteroid.py  separate_cosy.py  separate_mossformer2.py  stereo_to_mono.py
